--- a/src/components/common/navbar/navbar.css
+++ b/src/components/common/navbar/navbar.css
@@ -3,6 +3,11 @@
   color: white;
 }
 
+.navbar {
+  position: relative;
+  z-index: 10;
+}
+
 .nav-item:hover {
   background-color: rgba(0, 0, 0, 0.25);
   border-radius: 5px;
