--- a/src/pages/layout.css
+++ b/src/pages/layout.css
@@ -1,6 +1,6 @@
 .layout-wrapper {
-  display: 'flex';
-  flex-direction: 'row wrap';
+  display: "flex";
+  flex-direction: "row wrap";
   width: 100%;
   height: 100%;
   position: relative;
