--- a/src/components/invoice/invoice.css
+++ b/src/components/invoice/invoice.css
@@ -89,6 +89,11 @@
   border-bottom: solid 1px #aaa;
 }
 
+.cp-invoice-services .cp-invoice-no-services td {
+  border: none;
+  padding: 12px;
+}
+
 .cp-invoice-services .cp-invoice-services-list td:first-child {
   max-width: 210px;
 }
