--- a/src/pages/services/page-services.css
+++ b/src/pages/services/page-services.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: top;
   padding: 10px 0;
   width: 90%;
 }
